fix scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,6 @@ body {
     .index_container {
         width: 100%;
         margin: 0 auto;
-        overflow-y: scroll;
         margin-bottom: 150px;
     }
 
